XWIKI-24332: Any JAR extension uninstall/upgrade on root namespace is blocked a very long time on myxwiki.org * fix merge (move to a Java 17 compatible version)